<resources>
    <string name="app_name">ดูแล</string>

    <string name="register">ลงทะเบียน</string>
    <string name="welcome_login">ลงชื่อเข้าใช้</string>

    <!-- form register -->
    <string name="passportId">เลขบัตรประชาชน</string>
    <string name="orsomoId">รหัสประจำตัว อสม.</string>
    <string name="healthId">รหัสประจำตัวเจ้าหน้าที่สาธารณะสุข</string>
    <string name="password">รหัสผ่าน</string>
    <string name="name">ชื่อ</string>
    <string name="lastName">นามสกุล</string>
    <string name="datetime">วัน/เดือน/ปี</string>
    <string name="sex">เพศ</string>
    <string name="address">ที่อยู่</string>
    <string name="phone">เบอร์โทรศัพท์</string>

    <!-- Staff -->
    <string name="orsomo">อสม.</string>
    <string name="health">สาธารณะสุข</string>
    <string name="public_health">รพ.สต</string>
    <string name="person">ประชาชนทั่วไป</string>
    <string name="person_two">ประชาชน</string>

    <!-- Menu -->
    <string name="menu_orsomor_elderly">ผู้สูงอายุของฉัน</string>
    <string name="menu_public_elderly">อสม.ของฉัน</string>
    <string name="menu_person_elderly">ข้อมูลสุขภาพ</string>
    <string name="menu_evaluation">แบบประเมิน</string>
    <string name="menu_file">ไฟล์เอกสาร</string>
    <string name="menu_knowlege">ความรู้สุขภาพ</string>
    <string name="menu_news">ข่าวสาร</string>
    <string name="menu_notification">การแจ้งเตือน</string>
    <string name="menu_chat">สนทนา</string>
    <string name="menu_profile">ข้อมูลส่วนตัว</string>
    <string name="menu_calendar">ตารางนัดหมาย</string>
    <string name="menu_edit_profile">แก้ไข</string>
    <string name="menu_body_mass">ดัชนีมวลกาย</string>
    <string name="menu_pressure">ความดัน</string>
    <string name="menu_blood_pressure">ความดันโลหิต</string>
    <string name="menu_sugar">ระดับน้ำตาล</string>
    <string name="menu_vaccine">วัคซีน</string>
    <string name="logout">ออกจากระบบ</string>

    <string name="dialog_ok">OK</string>

    <!-- dailog button -->
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_no_change">ไม่เปลี่ยน</string>
    <string name="dialog_change">เปลี่ยนแปลง</string>
    <string name="orsomor_elderly_profile">ข้อมูลผู้สูงอายุ</string>

    <!-- elderly profile -->
    <string name="public_elderly_profile">ข้อมูลอสม.</string>
    <string name="public_orsomor_detail">อสม.ข้อมูล</string>
    <string name="add_my_elderly">เพิ่มผู้สูงอายุของฉัน</string>
    <string name="menu_gps">GPS</string>
    <string name="list_elderly">รายชื่อผู้สูงอายุ</string>

    <string name="list_orsomor">รายชื่ออสม.</string>
    <string name="space">\u0020</string>

    <string name="detail">รายละเอียด</string>
    <string name="elderdly_history">ประวัติการดูแล</string>
    <string name="add_body_mass">เพิ่มข้อมูลดัชนีมวลกาย</string>
    <string name="add_orsomor">เพิ่มอสม.</string>
    <string name="body_mass_history">ประวัติการบันทึกข้อมูล</string>
    <string name="add_evaluation">เพิ่มข้อมูลดความดันโลหิต</string>
    <string name="save">บันทึก</string>
    <string name="history_evaluation">ประวัติการบันทึกข้อมูล</string>
    <string name="suget_history">ประวัติการบันทึกข้อมูล</string>
    <string name="text_detail_add_body_mass">ระบุรายละเอียดน้ำหนัก/ส่วนสูงที่วัดได้</string>
    <string name="day">วันที่</string>
    <string name="time">เวลา</string>
    <string name="weight">น้ำหนัก</string>
    <string name="kg">กก.</string>
    <string name="height">ส่วนสูง</string>
    <string name="cm">ซม.</string>
    <string name="defult_weight">น้ำหนักน้อยกว่ามาตรฐาน</string>
    <string name="kg_cm">หน่วย: กก./ม.^2</string>
    <string name="add_sugar_blood">เพิ่มข้อมูลระดับน้ำตาลในเลือด</string>
    <string name="title_activity_maps">Map</string>
    <string name="loading">Loading</string>
    <string name="remove_elderly">ลบผู้สูงอายุออกจากการดูแลของฉัน</string>

    <string name="remove_orsomor">ลบรายชื่อนี้ออกจากอสม.ของฉัน</string>
    <string name="update_my_location">อัปเดทตำแหน่ง</string>
    <string name="add_elderly">เพิ่มผู้สูงอายุ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_manual">คู่มือใช้งาน</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="gender">
        <item>ชาย</item>
        <item>หญิง</item>
    </string-array>

</resources>
